--- a/ogya/build.gradle
+++ b/ogya/build.gradle
@@ -34,7 +34,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation "android.arch.paging:runtime:1.0.1"
     implementation "androidx.appcompat:appcompat:$androidxVersion"
     implementation "androidx.recyclerview:recyclerview:$androidxVersion"
     implementation "com.google.android.material:material:$androidxVersion"
